--- a/proj/cs50/table.html
+++ b/proj/cs50/table.html
@@ -2,6 +2,16 @@
 <html lang="'en">
     <head>
         <title>Table</title>
+        <style>
+            table {
+                border: 1px solid black;
+                border-collapse: collapse;
+            }
+            td ,th{
+                border: 1px solid black;
+                padding: 5px;
+            } 
+        </style>
     </head>
     <body>
         <table>
